--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,22 @@
-document.addEventListener('DOMContentLoaded', function(event) {
-    document.getElementById('drop').addEventListener('click', function(ev) {
-        div = document.createElement('div');
-        div.classList.add('gravity-affected-object');
-        image = document.createElement('img');
-        image.src = 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Red_Apple.jpg/640px-Red_Apple.jpg';
-        image.width = 100;
-        image.classList.add('gravity-affected-object');
-        div.style.position = 'absolute';
-        div.style.left = '50%';
-        
-        div.appendChild(image);
-        
-        document.getElementById('page-top').appendChild(div);
-        setTimeout(function() {
-            div.style.marginTop = '1000px';
-        }, 100);
-    });
-});
+[id="G4120952749"] .page-layout {
+	max-width: 25%;
+}
 
-.gravity-affected-object {
-    transition: all 1s linear;
-    transition-timing-function: cubic-bezier(0.33333, 0, 0.66667, 0.33333);
-    z-index: -5000;
+[id="G4120952749"].page {
+	justify-content: flex-start;
+	min-height: var(--viewport-height);
+}
+
+[id="G4120952749"] .backdrop {
+}
+
+.mobile [id="G4120952749"] .backdrop {
+}
+
+.mobile [id="G4120952749"] .page-layout {
+}
+
+[id="G4120952749"] .page-content {
+	align-items: flex-start;
+	width: 100%;
 }
