--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ h1 {
   font-size: 5em;
   font-weight: 700;
   letter-spacing: -2.7px;
-  position: relative;
+  position: absolute;
   
 }
 
@@ -175,4 +175,11 @@ nav a:hover {
   width: 100%;
   height: 100%;
   object-fit: cover; /* Remplit sans déformation */
+}
+
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; /* Place le canvas en arrière-plan */
 }
