--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body {
   overflow-x: hidden;
   cursor: crosshair;
   transition: background-color 0.3s ease, color 0.3s ease;
+  width: 100vw;
+  height: 100vh;
 }
 
 button {
@@ -31,6 +33,7 @@ h1 {
   font-weight: 700;
   letter-spacing: -2.7px;
   position: relative;
+  z-index: 20;
   
 }
 
@@ -176,10 +179,13 @@ nav a:hover {
   height: 100%;
   object-fit: cover; /* Remplit sans déformation */
 }
-
-canvas {
-  position: absolute;
+#grain-overlay {
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: -1; /* Place le canvas en arrière-plan */
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Permet de laisser passer les clics aux éléments sous le canvas */
+  z-index: 10; /* Assure qu'il ne recouvre pas les éléments interactifs */
 }
+
