--- a/styles.css
+++ b/styles.css
@@ -176,8 +176,9 @@ nav a:hover {
   grid-auto-rows: minmax(250px, auto); /* Hauteur automatique des lignes */
   gap: 0px; /* Espacement entre les éléments */
   width: 100%;
-  max-width: 1100px; /* Correction de max-width */
-  padding-top: 10px; /* Petit espace au-dessus de la grille */
+  max-width: 1100px;
+  margin: 0px;
+  
 }
 
 .grid img,
