--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,17 @@ ul {
     display: sticky;
     justify-content: space-around;
     position: fixed;
+    font-size: 0.8em;
+  }
+
+  nav a {
+    text-decoration: none;
+    font-size: 0.6em;
+    font-weight: 500;
+    letter-spacing: -0.4px;
+    display: inline-block;
+    bottom: 0;
+  
   }
 
   .image-section {
@@ -166,9 +177,9 @@ nav a {
 
 }
 
-nav a:hover {
-  opacity: 0.6;
-}
+
+
+
 
 .grid {
   display: grid;
@@ -176,6 +187,7 @@ nav a:hover {
   grid-auto-rows: minmax(250px, auto); /* Hauteur automatique des lignes */
   gap: 0px; /* Espacement entre les éléments */
   width: 100%;
+  
   max-width: 1100px;
   margin: 0px;
   
@@ -189,10 +201,10 @@ nav a:hover {
   display: block;
 }
 
+
 .grid img:hover {
   opacity: 0.6;
 }
-
 
 
 /* Les éléments de la grille sont tous ajustés sans espace vide */
@@ -236,7 +248,6 @@ nav a:hover {
   grid-row: span 1;    /* Image 8 prend une ligne */
 }
 
-
 #grain-overlay {
   position: fixed;
   top: 0;
@@ -247,3 +258,19 @@ nav a:hover {
   z-index: 10; /* Assure qu'il ne recouvre pas les éléments interactifs */
 }
 
+
+/* Style de la scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Fond de la scrollbar */
+::-webkit-scrollbar-track {
+  background: var(--scrollbar-background, );
+}
+
+/* Curseur de la scrollbar */
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb, #000);
+
+}
