--- a/styles.css
+++ b/styles.css
@@ -187,8 +187,7 @@ nav a {
   grid-auto-rows: minmax(250px, auto); /* Hauteur automatique des lignes */
   gap: 0px; /* Espacement entre les éléments */
   width: 100%;
-  
-  max-width: 1100px;
+  max-width: 1100%;
   margin: 0px;
   
 }
