--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ ul {
   }
 
   h1 {
-    font-size: 3.5em; /* Ajustement plus subtil pour les tablettes */
+    font-size: 3.5em;
     letter-spacing: -2px;
     text-align: center;
     position: relative;
@@ -125,6 +125,7 @@ ul {
 
   .text-section {
     text-align: justify;
+    font-size: 1em;
   }
 
   nav {
@@ -154,7 +155,7 @@ ul {
 
 @media (max-width: 768px) {
   h1 {
-    font-size: 2.5em; /* Taille réduite pour mobile */
+    font-size: 2.5em;
     text-align: center;
     top: 15%;
   }
@@ -168,20 +169,39 @@ ul {
   .text-section,
   .image-section {
     width: 100%;
+    padding: 0;
   }
 
   .text-section {
     text-align: justify;
-    font-size: 1em; /* Ajustement de la taille de texte */
+    font-size: 1em;
   }
 
   .grid {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Adaptation à de plus petites résolutions */
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    gap: 10px;
   }
 
   .image-section {
     width: 100%;
     padding: 0;
+  }
+
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 12px 0;
+  }
+
+  nav a {
+    text-decoration: none;
+    font-size: 1em;
+    font-weight: 500;
+    letter-spacing: -0.4px;
+    display: block;
+    padding: 10px;
   }
 }
 
