--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,6 @@ ul {
   align-items: center;
   width: 80%;
   max-width: 1200px;
-  margin: 0 auto;
 }
 
 .text-section {
@@ -100,22 +99,23 @@ ul {
   height: auto;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   body {
     overflow: hidden;
   }
 
   h1 {
-    font-size: 3.5em;
+    font-size: 2.5em; /* Augmente la taille de la police sur mobile */
     letter-spacing: -2px;
     text-align: center;
-    position: relative;
+    position: fixed;
+    top: 10%; /* Ajuste la position pour éviter la superposition avec le nav */
   }
 
   .container {
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 120px;
   }
 
   .text-section,
@@ -125,7 +125,6 @@ ul {
 
   .text-section {
     text-align: justify;
-    font-size: 1em;
   }
 
   nav {
@@ -136,73 +135,24 @@ ul {
     justify-content: space-between;
     padding: 12px 15px;
     z-index: 1000;
+    pointer-events: auto; /* Garantit que la nav est interactive */
   }
 
   nav a {
     text-decoration: none;
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: 500;
     letter-spacing: -0.4px;
     display: inline-block;
-    padding: 8px 12px;
+    padding: 8px 12px; /* Espacement amélioré */
+    transition: color 0.3s ease;
+    pointer-events: auto; /* Assure que les liens sont cliquables */
   }
+
 
   .image-section {
     width: 70%;
     padding: 10%;
-  }
-}
-
-@media (max-width: 768px) {
-  h1 {
-    font-size: 2.5em;
-    text-align: center;
-    top: 15%;
-  }
-
-  .container {
-    flex-direction: column;
-    align-items: center;
-    margin-top: 80px;
-  }
-
-  .text-section,
-  .image-section {
-    width: 100%;
-    padding: 0;
-  }
-
-  .text-section {
-    text-align: justify;
-    font-size: 1em;
-  }
-
-  .grid {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-auto-rows: 1fr; /* Garder un ratio 1:1 pour chaque élément */
-    gap: 0px;
-    width: 100%;
-    margin: 0;
-  }
-
-  .image-section {
-    width: 100%;
-    padding: 0;
-  }
-
-  nav {
-    display: flex;
-    align-items: center;
-    padding: 12px 0;
-  }
-
-  nav a {
-    text-decoration: none;
-    font-size: 1em;
-    font-weight: 500;
-    letter-spacing: -0.4px;
-    display: block;
-    padding: 10px;
   }
 }
 
@@ -212,8 +162,8 @@ nav {
   justify-content: space-around;
   position: fixed;
   bottom: 0;
-  padding: 12px 0;
-  z-index: 1000;
+  padding-bottom: 5%;
+  z-index: 1000; /* Assure que la nav est au-dessus des autres éléments */
 }
 
 nav a {
@@ -222,19 +172,21 @@ nav a {
   font-weight: 500;
   letter-spacing: -0.4px;
   display: inline-block;
-  padding: 10px;
+  bottom: 0;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Colonnes flexibles pour s'adapter à l'écran */
-  grid-auto-rows: 1fr; /* Hauteur égale à la largeur */
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: minmax(250px, auto);
   gap: 0px;
   width: 100%;
-  margin: 2px;
+  max-width: 1100%;
+  margin: 0px;
 }
 
-.grid img{
+.grid img,
+.grid video {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -243,6 +195,46 @@ nav a {
 
 .grid img:hover {
   opacity: 0.6;
+}
+
+.grid img:nth-child(1) {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.grid img:nth-child(2) {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.grid img:nth-child(3) {
+  grid-column: span 1;
+  grid-row: span 2;
+}
+
+.grid video:nth-child(4) {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.grid img:nth-child(5) {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.grid img:nth-child(6) {
+  grid-column: span 2;
+  grid-row: span 1;
+}
+
+.grid video:nth-child(7) {
+  grid-column: span 1;
+  grid-row: span 2;
+}
+
+.grid img:nth-child(8) {
+  grid-column: span 1;
+  grid-row: span 1;
 }
 
 #grain-overlay {
